<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kstechnologies.NanoScan.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:paddingTop="25dp"
            app:theme="@style/ToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/rl_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dip8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/temperature"
                android:textColor="@color/black" />

            <ToggleButton
                android:id="@+id/tb_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textOff="&#176;C"
                android:textOn="&#176;F" />

        </RelativeLayout>

        <!--这个view的作用是实现一条线的效果-->
        <View
            android:id="@+id/view_temp_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_below="@id/rl_temperature"
            android:background="#8c8b8b" />

        <RelativeLayout
            android:id="@+id/rl_freq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_temp_divider"
            android:paddingTop="@dimen/dip8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/spatial_freq"
                android:textColor="@color/black" />

            <ToggleButton
                android:id="@+id/tb_spatial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textOff="波数"
                android:textOn="波长" />

        </RelativeLayout>

        <View
            android:id="@+id/view_freq_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_below="@id/rl_freq"
            android:background="#8c8b8b" />

        <RelativeLayout
            android:id="@+id/rl_setNano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_freq_divider"
            android:paddingTop="@dimen/dip8">

            <Button
                android:id="@+id/btn_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/go" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/btn_set"
                android:text="@string/set_nano"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_pref_nano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:visibility="invisible" />

        </RelativeLayout>

        <View
            android:id="@+id/view_set_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_below="@id/rl_setNano"
            android:background="#8c8b8b" />

        <RelativeLayout
            android:id="@+id/rl_clearNano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_setNano"
            android:paddingTop="@dimen/dip8">

            <Button
                android:id="@+id/btn_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/forget" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/btn_forget"
                android:text="@string/clear_nano"
                android:textColor="@color/black" />

        </RelativeLayout>

        <View
            android:id="@+id/view_clear_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_below="@id/rl_clearNano"
            android:layout_marginBottom="@dimen/dip8"
            android:background="#8c8b8b" />

    </RelativeLayout>
</LinearLayout>