<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gaohui.nano.NewScanActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:titleTextColor="@color/white"
            app:theme="@style/ToolbarTheme" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            style="@style/TabLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dip8"
            android:layout_marginStart="@dimen/dip8"
            android:layout_weight="1">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/calProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="gone" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_graph_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="@dimen/dip8"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/dip8">

            <Button
                android:id="@+id/btn_scan"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/dip8"
                android:text="@string/scan"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:theme="@style/ButtonTheme" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/btn_scan">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/prefix"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <EditText
                            android:id="@+id/et_prefix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="4"
                            android:hint="@string/nano"
                            android:singleLine="true" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="样本名称"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <EditText
                            android:id="@+id/et_sample"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="4"
                            android:hint="sample" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|center_horizontal|center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/save_to_sd"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/btn_saveSD"
                            style="@style/SwitchButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            app:kswTintColor="#FF5449" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_os"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|center_horizontal|center_vertical">

                        <TextView
                            android:id="@+id/tv_saveOS"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/save_to_android"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/btn_saveOS"
                            style="@style/SwitchButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            app:kswTintColor="#FF5449" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_continuous"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|center_horizontal|center_vertical">

                        <TextView
                            android:id="@+id/tv_continuous"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cont_scan"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/btn_continuous"
                            style="@style/SwitchButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            app:kswTintColor="#FF5449" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_conf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minHeight="@dimen/dip40">

                        <TextView
                            android:id="@+id/tv_conf"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/scan_conf"
                            android:textAppearance="?android:textAppearanceMedium" />

                        <TextView
                            android:id="@+id/tv_scan_conf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/col_1"
                            android:textAppearance="?android:textAppearanceMedium" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:background="@color/gray" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>